--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "dockerview"
-version = "0.1.1"
+dynamic = ["version"]
 description = "A simple terminal-based Docker performance monitor."
 readme = "README.md"
 authors = [
@@ -27,8 +27,9 @@ dependencies = [
 dockerview = "dockerview.cli:main"
 
 [project.urls]
-"Homepage" = "https://github.com/zsuroy/dockerview"
-"Documentation" = "https://github.com/zsuroy/dockerview/blob/main/README.md"
+Homepage = "https://github.com/zsuroy/dockerview"
+Documentation = "https://github.com/zsuroy/dockerview/blob/main/README.md"
+Changelog = "https://github.com/zsuroy/dockerview/blob/master/CHANGELOG.md"
 
 [project.optional-dependencies]
 dev = [
